Remove deprecated elements